# openremap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  main.py  pyproject.toml
.github/workflows/: sync-public.yml
core/: CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
core/.github/workflows/: ci.yml
core/docs/: api.md  cli.md  recipe-format.md  setup.md
core/docs/commands/: identify.md  scan.md  tune.md  validate.md  workflow.md
core/docs/install/: developers.md  macos-linux.md  windows.md
core/docs/manufacturers/: bosch.md
core/public/: recipe.json
core/src/openremap/: __init__.py
core/src/openremap/cli/: main.py
core/src/openremap/cli/commands/: cook.py  identify.py  patch.py  scan.py  tune.py  validate.py
core/src/openremap/tuning/manufacturers/: __init__.py  base.py
core/src/openremap/tuning/manufacturers/bosch/: __init__.py
core/src/openremap/tuning/manufacturers/bosch/edc1/: extractor.py
core/src/openremap/tuning/manufacturers/bosch/edc15/: __init__.py  extractor.py  patterns.py
core/src/openremap/tuning/manufacturers/bosch/edc16/: __init__.py  extractor.py  patterns.py
core/src/openremap/tuning/manufacturers/bosch/edc17/: __init__.py  extractor.py  patterns.py
core/src/openremap/tuning/manufacturers/bosch/edc3x/: extractor.py
core/src/openremap/tuning/manufacturers/bosch/lh/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/m1x/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/m1x55/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/m2x/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/m3x/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/m5x/: __init__.py  extractor.py  patterns.py
core/src/openremap/tuning/manufacturers/bosch/me7/: __init__.py  extractor.py  patterns.py
core/src/openremap/tuning/manufacturers/bosch/me9/: __init__.py  extractor.py
core/src/openremap/tuning/manufacturers/bosch/motronic_legacy/: extractor.py
core/src/openremap/tuning/schemas/: analyzer.py  patcher.py
core/src/openremap/tuning/services/: confidence.py  identifier.py  patcher.py  recipe_builder.py  validate_exists.py  validate_patched.py  validate_strict.py
core/tests/: conftest.py
core/tests/tuning/: test_confidence.py  test_identifier.py  test_patcher.py  test_recipe_builder.py  test_validate_exists.py  test_validate_patched.py  test_validate_strict.py
core/tests/tuning/manufacturers/: test_edc15_extractor.py  test_edc17_extractor.py  test_me7_extractor.py  test_me9_extractor.py
docs/: README.md  about.md  architecture.md  cli.md  confidence.md  quickstart.md  recipe-format.md  setup.md  tui.md
docs/commands/: README.md  commands.md  cook.md  families.md  identify.md  tune.md  validate.md
docs/install/: README.md  developers.md  macos-linux.md  windows.md
docs/manufacturers/: README.md  bosch-internals.md  bosch.md  delphi.md  marelli.md  siemens-internals.md  siemens.md
server/: .env.example  README.md  main.py  pyproject.toml
server/docs/: api.md
server/src/api/bg_tasks/: redis_monitor.py
server/src/api/core/: bootstrap.py  config.py  lifespan.py  limiter.py  logger.py  mongodb.py  redis_client.py  router_v1.py
server/src/api/routers/v1/: system.py  tuning.py
src/bg_tasks/: redis_monitor.py
src/core/: bootstrap.py  config.py  lifespan.py  limiter.py  logger.py  mongodb.py  redis_client.py  router_v1.py
src/openremap/cli/: main.py
src/openremap/cli/commands/: cmds.py  cook.py  identify.py  scan.py  tune.py  validate.py  workflow.py
src/openremap/tui/: __init__.py  app.py  main.py  theme.tcss
src/openremap/tuning/manufacturers/: __init__.py  base.py
src/openremap/tuning/manufacturers/bosch/: __init__.py
src/openremap/tuning/manufacturers/delphi/: __init__.py
src/openremap/tuning/manufacturers/marelli/: __init__.py
src/openremap/tuning/manufacturers/siemens/: __init__.py
src/openremap/tuning/services/: confidence.py  identifier.py  map_hunter.py  recipe_builder.py
src/routers/v1/: system.py
tests/cli/: test_cli_cook.py  test_cli_tune.py  test_cli_validate.py
tests/tuning/: test_confidence.py  test_recipe_builder.py
tests/tuning/manufacturers/: test_edc15_extractor.py  test_edc16_extractor.py  test_edc3x_extractor.py  test_ems2000_extractor.py  test_m1x_extractor.py  test_m2x_extractor.py  test_m4x_extractor.py  test_m5x_extractor.py  test_me7_extractor.py  test_mono_extractor.py  test_mp9_extractor.py  test_ppd_extractor.py  test_sid801_extractor.py  test_sid803_extractor.py  test_simos_extractor.py  test_simtec56_extractor.py
(+65 files in other folders)
