[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openremap"]

[tool.uv]
package = true

[project]
name = "openremap"
version = "0.4.1"
description = "ECU binary analysis and patching toolkit — diff, validate, and apply tuning recipes to automotive ECU binaries."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "typer>=0.15.0",
    "rarfile>=4.2",
    "pydantic>=2",
    "textual>=0.80",
]

[project.scripts]
openremap     = "openremap.cli.main:main"
openremap-tui = "openremap.tui.main:run"

[project.urls]
Homepage = "https://github.com/Pinelo92/openremap"
Repository = "https://github.com/Pinelo92/openremap"
"Bug Tracker" = "https://github.com/Pinelo92/openremap/issues"
Changelog = "https://github.com/Pinelo92/openremap/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
