[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv]
package = true

[project]
name = "openremap-api"
version = "0.1.0"
description = "Private FastAPI server for the openremap ECU tuning toolkit."
requires-python = ">=3.14"
dependencies = [
    "openremap>=0.1.0",
    "fastapi>=0.135.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
# During development, always use the local workspace version of the core package.
# Remove this block when consuming a published PyPI release instead.
openremap = { workspace = true }
